--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+:root{
+    --max-width: 1170px;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -6,4 +10,9 @@
 
 body{
     font-family: -apple-system;
+}
+
+img{
+    display: block;
+    width: 100%;
 }
